fix styling on safari

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -23,14 +23,19 @@
     U+FEFF;
 }
 
-@layer global;
+@layer normalize;
 
-@layer global {
+@layer normalize {
   html {
     height: 100%;
   }
 
   body * {
     box-sizing: inherit;
+  }
+
+  input[type="checkbox"] {
+    width: 0;
+    height: 0;
   }
 }
